[gd_scene load_steps=2 format=3 uid="uid://2dyy7jmnjcv0"]

[ext_resource type="Script" path="res://gdscripts/ui.gd" id="1_h6ika"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6ika")
metadata/_edit_vertical_guides_ = [1136.0]

[node name="Numbers" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -86.0
offset_right = 24.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label1" type="Label" parent="Numbers"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Numbers"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "2"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Numbers"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -94.0
offset_right = 38.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
